longhorn/svc.load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.lan
spec:
  type: LoadBalancer
