longhorn/ingress.http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-redirect@kubernetescrd
spec:
  rules:
    - host: longhorn.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn
                port:
                  name: http
