longhorn/ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-https
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - longhorn.lan
      secretName: longhorn-tls
  rules:
    - host: longhorn.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  name: http
